fixing the fixed and overflow styles

--- a/src/Message/Mothership/ControlPanel/View/_assets/css/basic.css
+++ b/src/Message/Mothership/ControlPanel/View/_assets/css/basic.css
@@ -414,11 +414,12 @@ dd {
 	width: 100%;
 	height: 100%;
 	background: #F1F1F1;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 [class^="container-"] footer {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 40px;
